--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       dockerfile: Dockerfile
     
     # Nombre de la imagen
-    image: springboot-crud-app:latest
+    image: ricitosdeoro2001/springboot-crud-app:latest
     
     # Mapeo de puertos (host:contenedor)
     ports:
